[gd_scene load_steps=8 format=3 uid="uid://dfxmbmpknqpiu"]

[ext_resource type="Script" path="res://HUD/HUD.gd" id="1_tfmrm"]
[ext_resource type="PackedScene" path="res://HUD/Labels/ScoreLabel.tscn" id="2_d6ag7"]
[ext_resource type="FontFile" uid="uid://dn00tv3b7l5vl" path="res://Assets/UI/Fonts/Xolonium-Regular.ttf" id="3_orpqh"]
[ext_resource type="Script" path="res://HUD/HeartGroup.gd" id="4_rc5og"]
[ext_resource type="PackedScene" uid="uid://bv0f4hvll7hte" path="res://Scenes/Player/Heart/HeartHud.tscn" id="5_8nb6n"]
[ext_resource type="Script" path="res://Scenes/Player/Heart/HeartHud.gd" id="6_u1lwk"]

[sub_resource type="Shortcut" id="Shortcut_g4j74"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_tfmrm")

[node name="ScoreLabel" parent="." instance=ExtResource("2_d6ag7")]

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_orpqh")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_g4j74")
text = "START"

[node name="HeartGroup" type="Node2D" parent="."]
script = ExtResource("4_rc5og")

[node name="Heart1" parent="HeartGroup" instance=ExtResource("5_8nb6n")]
script = ExtResource("6_u1lwk")
id = 1

[node name="Heart2" parent="HeartGroup" instance=ExtResource("5_8nb6n")]
position = Vector2(80, 40)
script = ExtResource("6_u1lwk")
id = 2

[node name="Heart3" parent="HeartGroup" instance=ExtResource("5_8nb6n")]
position = Vector2(119, 40)
script = ExtResource("6_u1lwk")
id = 3

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
